Add what po actually means
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@6374 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/lib/Jifty/Manual/Tutorial.pod
+++ b/lib/Jifty/Manual/Tutorial.pod
@@ -126,7 +126,7 @@ have to touch this directory.
 =item share/web/po
 
 Jifty supports internationalization. F<share/web/po/> is where your
-translations will go.
+translations ("portable object templates") will go.
 
 =item share/web/templates
 
