render as works too nowadays
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@6376 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/lib/Jifty/Manual/Tutorial.pod
+++ b/lib/Jifty/Manual/Tutorial.pod
@@ -241,7 +241,7 @@ Add the lines:
   column body => 
         type is 'text',
         label is 'Content',
-        render_as 'Textarea';
+        render as 'Textarea';
 
 Save your model class.
 
