--- a/lib/Jifty/Manual/Tutorial.pod
+++ b/lib/Jifty/Manual/Tutorial.pod
@@ -54,9 +54,8 @@ L</GETTING HELP> below for info on how to join the list.)
 Once you have Jifty happily installed, you're ready to
 create your first application.
 
-Jifty is intentionally a bit minimalist. All you I<really> need to make
-an application go is a copy of the F<jifty> commandline tool (inside
-your new application's F<bin/> directory.)
+All you I<really> need to make an application go is a copy of the F<jifty>
+command-line tool (inside your new application's F<bin/> directory.)
 
 Of course, it's often helpful to have a bit more structure around to
 help guide your work. Jifty comes with tools to build that structure for
